install/package/objects/CPT_External_Field__c.object
<CustomObject>
    <description>Allows you to use External fields rather than ids

External_Field_Name__c = pmp_Account__r.pmp_SAPNumber__c
Field_Name__c = pmp_Account__c
SOQL__c= select Id from Account where pmp_SAPNumber__c =?</description>
    <fields>
        <fullName>External_Field_Name__c</fullName>
        <externalId>true</externalId>
        <label>External Field Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Field_Name__c</fullName>
        <label>Field Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SOQL__c</fullName>
        <label>SOQL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>CPT External Field</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>CPT  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CPT External Fields</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>